# GAM300

./: .gitignore  GAM300.sln  README.md
.github/workflows/: build-test.yml
AndroidProject/: settings.gradle
AndroidProject/app/: build.gradle
AndroidProject/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidProject/gradle/: libs.versions.toml
Editor/: Editor.vcxproj  Editor.vcxproj.filters
Editor/include/: EditorManager.h
Editor/src/: main.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/include/: Engine.h  TestScene.h  pch.h
Engine/src/: Engine.cpp  TestScene.cpp  pch.cpp
Game/: Game.vcxproj  Game.vcxproj.filters
Project/: .gitattributes  CMakeLists.txt  CMakePresets.json  SETUP.md  imgui.ini  vcpkg.json
Project/.claude/: settings.local.json
Project/Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  imgui.ini
Project/Editor/include/: EditorCamera.hpp  EditorInputManager.hpp  EditorState.hpp  GUIManager.hpp  RaycastUtil.hpp  SceneWindow.h  UIManager.h
Project/Editor/include/Panels/: AssetBrowserPanel.hpp  ConsolePanel.hpp  EditorPanel.hpp  GamePanel.hpp  InspectorPanel.hpp  PanelManager.hpp  PerformancePanel.hpp  PlayControlPanel.hpp  SceneHierarchyPanel.hpp  ScenePanel.hpp
Project/Editor/src/: EditorCamera.cpp  EditorInputManager.cpp  EditorManager.cpp  EditorState.cpp  GUIManager.cpp  RaycastUtil.cpp  SceneWindow.cpp  UIManager.cpp  main.cpp
Project/Editor/src/Panels/: AssetBrowserPanel.cpp  ConsolePanel.cpp  EditorPanel.cpp  GamePanel.cpp  InspectorPanel.cpp  PanelManager.cpp  PerformancePanel.cpp  PlayControlPanel.cpp  SceneHierarchyPanel.cpp  ScenePanel.cpp
Project/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  cpp.hint
Project/Engine/include/: Engine.h  GraphicsManager.h  Logging.hpp  RunTimeVar.hpp  TestScene.hpp  TransformSystem.hpp  WindowManager.h  WindowManager.hpp  pch.h
Project/Engine/include/Asset Manager/: Asset.hpp  AssetManager.hpp  AssetMeta.hpp  GUID.hpp  MetaFilesManager.hpp  ResourceManager.hpp
Project/Engine/include/ECS/: Component.hpp  ComponentManager.hpp  ECSManager.hpp  ECSRegistry.hpp  Entity.hpp  EntityManager.hpp  NameComponent.hpp  Signature.hpp  SystemManager.hpp
Project/Engine/include/Graphics/: Camera.h  EBO.h  GraphicsManager.hpp  IRenderComponent.hpp  IRenderItem.hpp  LightManager.hpp  Material.hpp  Mesh.h  Model.h  OpenGL.h  RenderSystem.hpp  Renderer.hpp  SceneRenderer.hpp  ShaderClass.h  Texture.h  TextureManager.h  VAO.h  VBO.h
Project/Engine/include/Graphics/DebugDraw/: DebugDrawComponent.hpp  DebugDrawSystem.hpp
Project/Engine/include/Graphics/Font/: Font.hpp
Project/Engine/include/Graphics/Model/: Model.h  ModelComponent.hpp  ModelRenderComponent.hpp  ModelRenderItem.hpp  ModelSystem.hpp
Project/Engine/include/Graphics/TextRendering/: Font.hpp  TextRenderComponent.hpp  TextRenderingSystem.hpp  TextUtils.hpp
Project/Engine/include/Input/: InputManager.hpp  Keys.h
Project/Engine/include/Math/: Matrix3x3.h  Matrix3x3.hpp  Matrix4x4.h  Matrix4x4.hpp  Vector3.h  Vector3D.h  Vector3D.hpp
Project/Engine/include/Platform/: AndroidPlatform.h  DesktopPlatform.h  IPlatform.h  Platform.h
Project/Engine/include/Reflection/: Base64.hpp  ReflectionBase.hpp
Project/Engine/include/Scene/: Scene.hpp  SceneInstance.hpp  SceneManager.hpp
Project/Engine/include/Serialization/: Deserialization.hpp  Deserialization.ipp
Project/Engine/include/Sound/: AudioManager.hpp
Project/Engine/include/Transform/: TransformComponent.hpp  TransformSystem.hpp
Project/Engine/src/: Deserialization.cpp  Engine.cpp  GraphicsManager.cpp  Logging.cpp  RunTimeVar.cpp  TestScene.cpp  TransformSystem.cpp  WindowManager.cpp
Project/Engine/src/Asset Manager/: Asset.cpp  GUID.cpp  MetaFilesManager.cpp
Project/Engine/src/ECS/: ComponentArray.hpp  ECSManager.cpp  ECSRegistry.cpp  EntityManager.cpp  System.hpp
Project/Engine/src/Graphics/: EBO.cpp  GraphicsManager.cpp  LightManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  RenderSystem.cpp  Renderer.cpp  SceneRenderer.cpp  ShaderClass.cpp  Texture.cpp  TextureManager.cpp  VAO.cpp  VBO.cpp
Project/Engine/src/Graphics/DebugDraw/: DebugDrawSystem.cpp
Project/Engine/src/Graphics/Model/: Model.cpp  ModelSystem.cpp
Project/Engine/src/Graphics/TextRendering/: Font.cpp  TextRenderingSystem.cpp  TextUtils.cpp
Project/Engine/src/Input/: InputManager.cpp  InputManager.hpp
Project/Engine/src/Math/: Matrix3x3.cpp  Matrix4x4.cpp  Vector3.cpp  Vector3D.cpp
Project/Engine/src/Platform/: AndroidPlatform.cpp  DesktopPlatform.cpp  Platform.cpp
Project/Engine/src/Reflection/: Base64.cpp  ReflectionBase.cpp
Project/Engine/src/Scene/: SceneInstance.cpp  SceneManager.cpp
Project/Engine/src/Serialization/: Deserialization.cpp
Project/Engine/src/Sound/: AudioManager.cpp
Project/Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters
Project/Game/include/: GameManager.h
Project/Game/src/: GameManager.cpp  main.cpp
Project/Libraries/FMOD/api/core/inc/: fmod.cs  fmod_errors.cs  fmod_errors.h
Project/Libraries/FMOD/api/studio/inc/: fmod_studio.cs  fmod_studio.h  fmod_studio.hpp  fmod_studio_common.h
Project/Libraries/FMOD/inc/: fmod.h  fmod.hpp  fmod_codec.h  fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h  fmod_output.h
Project/Libraries/IconFontCppHeaders/: GenerateIconFontCppHeaders.py  IconsCodicons.cs  IconsCodicons.go  IconsCodicons.h  IconsCodicons.py  IconsCodicons.rs  IconsFontAwesome7.cs  IconsFontAwesome7.go  IconsFontAwesome7.py  IconsFontAwesome7.rs  IconsFontAwesome7Brands.cs  IconsFontAwesome7Brands.go  IconsFontAwesome7Brands.h  IconsFontAwesome7Brands.py  IconsFontAwesome7Brands.rs  IconsLucide.cs  IconsLucide.go  IconsLucide.py  IconsLucide.rs  IconsMaterialSymbols.cs  IconsMaterialSymbols.go  IconsMaterialSymbols.py  IconsMaterialSymbols.rs
Project/Libraries/ImGui/: Readme.txt  imgui.lib
Project/Libraries/build-scripts/: build-spdlog-android.sh
Project/Libraries/spdlog/include/spdlog/fmt/bundled/: base.h
Project/Resources/: License.txt
Project/Resources/Shaders/: default.frag
(+11 files in other folders)
